force-app/main/default/objects/Account_Master__c/Account_Master__c.object-meta.xml
<CustomObject>
    <label>Account Master</label>
    <nameField>
        <label>Account Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>