force-app/main/default/objects/Account_Master__c/fields/Is_Foreign_Currency__c.field-meta.xml
<CustomField>
    <fullName>Is_Foreign_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Xpedeon : To track what accounts are FCY, and to be mandated realized FC amount.</description>
    <label>Is Foreign Currency</label>
    <type>Checkbox</type>
</CustomField>