force-app/main/default/objects/Account_Master__c/fields/IsDummy__c.field-meta.xml
<CustomField>
    <fullName>IsDummy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDummy</label>
    <type>Checkbox</type>
</CustomField>