force-app/main/default/objects/Account_Master__c/fields/Xpedeon_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Xpedeon_Account_Number__c</fullName>
    <label>Xpedeon Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>